alpm-types/src/version/snapshots/requirement::invalid_version_requirement@case_5_invalid_pkgver.snap
---
source: alpm-types/src/version/requirement.rs
---
error: invalid version requirement
 | 
 | <3.1>3.2
 |     ^ expected end of version requirement.
